--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 
-#navbar {
+/*.............................. nav bar start ..............................*/
+ #navbar {
     display: grid;
     grid-template-columns: 5% 10% 60% 12% 8%;
     grid-gap: 1%;
@@ -9,14 +10,10 @@
     background-color: #008ecc;
     color: white;
     padding: 8px;
-    /* position: sticky;
-    top: 0;
-    z-index: 1; */
+    
 }
 
-/* #MainLogo div{
-    border: 1px solid red;
-} */
+
 
 
 #MainLogo div img{
@@ -29,12 +26,12 @@
 #navbar #Search{
     outline-style: none;
     display: inline-block;
-}
+} 
 
 
 
 
-#navbar .navText {
+ #navbar .navText {
     font-size: 13px;
     font-weight: 600;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
@@ -52,32 +49,252 @@
 #navbar .menu {
     font-size: 35px;
     cursor: pointer;
+} 
+
+/*.............................. nav bar end  ..............................*/
+
+/* ...............dropdown Nav bar code start............ */
+
+
+#dropDown
+{
+	text-align:center;
+	font-family:helvetica;
+	background-color:lightgray;
+}
+h1
+{
+	margin:0px;
+	margin-top:40px;
+	color:#8181F7;
+	font-size:45px;
+}
+#main_menu
+{
+	background-color:lightgray;
+	float:left;
+	padding:0px;
+	width:700px;
+	height:50px;
+	line-height:50px;
+	margin-left: 100px;
+	border-radius:5px;
+}
+#main_menu .main_list
+{
+	color:white;
+	list-style-type:none;
+	float:left;
+	border-left:1px solid #666;
+	padding-left:27px;
+	padding-right:27px;
+	
+}
+#main_menu .main_list:hover
+{
+	color:#2E9AFE;
+}
+.main_list ul
+{
+	background-color:white;
+	width:600px;
+	position:absolute;
+	left:150px;
+	width:700px;
+	padding:0px;
+	float:left;
+	padding-bottom:10px;
+}
+.main_list ul p
+{
+	color:white;
+	background-color:#2E9AFE;
+	margin:0px;
+	text-align:left;
+	padding-left:10px;
+	font-size:20px;
+	font-weight:bold;
+}
+.main_list ul ol
+{
+	float:left;
+	padding:0px;
+	list-style-type:none;
+	margin-left:30px;
+}
+.main_list ul ol li
+{
+	line-height:25px;
+	font-weight:bold;
+	font-size:16px;
+	color:#2E9AFE;
+}
+.main_list ul ol li:first-of-type 
+{
+    list-style: none;
+    font-size:19px;
+	margin-top:10px;
+	color:#084B8A;
+}
+.main_list:hover ul
+{
+	display:block;
+}
+.main_list ul
+{
+	display:none;
 }
 
 
+/* ...............dropdown Nav bar  code end ............ */
 
 
+/*.......... product page .......... */
 
-
-
-
-/* ...............dropdown code start............ */
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: gainsboro;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
+.productPage .slideContainer{
+  margin-top: 10px;
 }
 
-.dropdown:hover .dropdown-content{
-    display:block;
+/* slider start */
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
 }
 
-/* ...............dropdown code end ............ */
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -92px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+/* .........................slider image ................. */
+
+/*.................... Top section ............ */
+#TopSection{
+  margin-top: 10px;
+}
+
+#poster3 img{
+  width: 100%;
+  height: auto;
+}
+
+#ShopFromCategory h1{
+  font-size: 20px;
+  color: black;
+}
+/*.................... Top section end ............ */
+
+
+
+
+/* ------------------category section---------------- */
+
+
+#topDeals1{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+#topDeals1 img{
+ height: 100px;
+}
+
+.div2 {
+  border: 1px solid lightgrey;
+  width: 80%;
+  height: auto;
+  margin: 10px;
+  text-align: center;
+  padding: 5px 5px;
+  /* background-color: rgb(250, 249, 245); */
+}
+
+.img2:hover {
+  width: 50%;
+  
+}
+
+.btn2 {
+  background-color: #008ecc;
+  width: 90%;
+  height: 25px;
+  margin: 10px;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
