--- a/css/cart.css
+++ b/css/cart.css
@@ -15,9 +15,9 @@
 
 
 #MainLogo div img{
-    height: 60px;
+  
     display: block;
-    width: 80%;
+    height: 3rem;
 }
 
 
@@ -176,6 +176,7 @@ h1
   #top>div:nth-child(2){
     display: flex;
     flex-direction: row;
+
   }
 
 
